alterações no alt imagens

--- a/Trabalho Individual/index.html
+++ b/Trabalho Individual/index.html
@@ -22,27 +22,27 @@
         <p>Aqui você assiste os melhores animes.</p></center>
         <div id="sites" class ="cards">
             <div class="card">
-                <img src="/assets/another_11zon.webp" alt="Another">
+                <img src="/assets/another_11zon.webp" alt="Menina de cabelo preto chanel usando tapa-olho e rmenino de costas de cabelos castanhos, céu avermelhado com pássaros pretos">
                 <p><b>Sinopse Another:</b> Aquela turma da escola guardava um segredo proibido de se contar… Na primavera de 1998, quando o Sakakibara (15 anos) foi transferido para a Escola de Ensino Fundamental Yomiyama do Norte, ele sentia que uma sensação estranha pairava no ar, lhe parecia como um temor por parte de seus colegas.</p>
             </div>
             <div class="card">
-                <img src="/assets/Bleach_11zon.webp" alt="Bleach">
+                <img src="/assets/Bleach_11zon.webp" alt="Personagem de frente cabelos laranja e várias pessoas em volta">
                 <p><b>Sinopse Bleach:</b> Em Bleach, Ichigo Kurosaki é um estudante de ensino médio incomum: desde pequeno, ele consegue ver fantasmas. Sua vida muda completamente quando ele e suas duas irmãs são atacados por um espírito maligno e recebem ajuda de uma shinigami, chamada Rukia Kuchiki.</p>
             </div>
             <div class="card">
-                <img src="/assets/fairy-tail_11zon.webp" alt="Fairy Tail">
+                <img src="/assets/fairy-tail_11zon.webp" alt="Dois gatos voadores, um branco e um azul, personagem de cabelo vermelho usando armadura, garota de cabelo loiro sorrindo, e mais 3 persongens">
                 <p><b>Sinopse Fairy Tail:</b> A história segue as aventuras de Lucy Heartfilia, uma jovem que sonha em se tornar uma maga e Natsu Dragneel, um mago adolescente que é membro da popular guilda de feiticeiros Fairy Tail que está a procura do dragão Igneel.</p>
             </div>
             <div class="card">
-                <img src="/assets/naruto_11zon.webp" alt="Naruto">
+                <img src="/assets/naruto_11zon.webp" alt="Equipe de 4 pessoas, um loiro, uma menina de cabelo rosa, um de cabelo preto e um de cabelo branco ">
                 <p><b>Sinopse Naruto:</b> Naruto é um anime baseado no mangá de mesmo nome escrito por Masashi Kishimoto. A série gira em torno das aventuras vividas por Naruto Uzumaki, um jovem órfão habitante da Aldeia da Folha que sonha em se tornar o quinto Hokage, o maior guerreiro e governante da vila.</p>
             </div>
             <div class="card">
-                <img src="/assets/FullMethal_11zon.webp" alt="fullmetal-alchemist-brotherhood">
+                <img src="/assets/FullMethal_11zon.webp" alt="Um jovem loiro com braço mecânico e seu companheiro robô atrás dele">
                 <p><b>Sinopse Fullmetal Alchemist Brotherhood:</b> Em Fullmetal Alchemist: Brotherhood, os irmãos Al e Ed, inconformados com a morte da mãe, driblam as regras da natureza e da alquimia para ressucitá-la, mas ambos sofrem consequências severas.</p>
             </div>
             <div class="card">
-                <img src="/assets/death-note_11zon.webp" alt="Death Note">
+                <img src="/assets/death-note_11zon.webp" alt="Foto preta e branca com 1 jovem do lado esquerdo e outro do lado direito, no meio uma maça caindo entre eles">
                 <p><b>Sinopse Death Note:</b> A história centra-se em Light Yagami, um estudante do ensino médio que descobre um caderno sobrenatural chamado Death Note, no qual pode matar pessoas se os nomes forem escritos nele enquanto o portador visualizar mentalmente o rosto de alguém que quer assassinar.</p>
             </div>
         </div>
